--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "test_watch": "nodemon -w build -- build test --watch",
     "test": "node build lint test",
 
-    "electron-start": "nodemon -w build -- build electron-start --watch",
-    "old-electron-start": "node build build_deps && electron-forge start dist/game/build.dev",
+    "electron-start": "nodemon -w build -- build electron-start-dev --watch",
     "electron-package-dev": "nodemon -w build -- build electron-package-dev --watch",
     "old-electron-package-dev": "node build build_deps && electron-forge package dist/game/build.dev",
     "old-electron-package-prod": "node build build && electron-forge package dist/game/build.prod",
